--- a/Week1/js-exercises/projct (Random Quote Generator)/index.html
+++ b/Week1/js-exercises/projct (Random Quote Generator)/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-    <div class="myProject" ">
+    <div id="myProject" " class="textColor">
         
         <div class="inner">
-            <h1 id="quote" class="textColor"><i class="fas fa-quote-left" ></i> Don't cry because it's over, smile because it happened.</h1>
-            <h3 id="author" class="textColor">-Dr.Seuss</h3>
+            <h1 id="quote" class="textColorText"><i class="fas fa-quote-left" ></i> Don't cry because it's over, smile because it happened.</h1>
+            <h3 id="author" class="textColorText">-Dr.Seuss</h3>
             <div class="leftAndRight">
                 <div class="con-right">
                     <button id="project" class="textColor" >    
