--- a/Week1/js-exercises/4-time.html
+++ b/Week1/js-exercises/4-time.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+    #timeZone{
+        font-size: 32px;
+        color:black;
+        margin: 20px;
+       } 
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
