--- a/Week1/js-exercises/projct (Random Quote Generator)/index.html
+++ b/Week1/js-exercises/projct (Random Quote Generator)/index.html
@@ -15,8 +15,8 @@
     <div id="myProject" " class="textColor">
         
         <div class="inner">
-            <h1 id="quote" class="textColorText"><i class="fas fa-quote-left" ></i> Don't cry because it's over, smile because it happened.</h1>
-            <h3 id="author" class="textColorText">-Dr.Seuss</h3>
+            <h1 id="quote" ><i class="fas fa-quote-left" ></i> Don't cry because it's over, smile because it happened.</h1>
+            <h3 id="author" >-Dr.Seuss</h3>
             <div class="leftAndRight">
                 <div class="con-right">
                     <button id="project" class="textColor" >    
