--- a/Week3/js-exercises-w3/project(The Tip Calculator)/TipCalculator.html
+++ b/Week3/js-exercises-w3/project(The Tip Calculator)/TipCalculator.html
@@ -20,7 +20,7 @@
             <div id="second" >
                 <p>How was your service ?</p><br>
                 <select id="discount" >
-                    <option value="0" >-- Choose an option --</option>
+                    <option value="" >-- Choose an option --</option>
                     <option value="30">30 % Outstanding</option>
                     <option value="20">20 % Good</option>
                     <option value="15">15 % It was OK</option>
@@ -37,47 +37,13 @@
                 <br><br>
                 <p>TIP AMOUNT</p>
                 <p>$ <span id="each">0.00</span></p>
-                <p id="makeHidden">each</p>
+                <p id="makeHidden">EACH</p>
 
             </div>
         </form>
     </div>
 <script type="text/javascript" src="TipCalculator.js"  ></script>
 <script>
-
-// // document.getElementById('calc').addEventListener('click',calculator);
-
-// function calculator(){
-   
-//     let amount = document.getElementById('amount').value;
-//     let discount = document.getElementById('discount').value;
-//     let people = document.getElementById('people').value;
-   
-    
-//     if(amount === "" ||discount === 0 || people === ""){
-
-//     alert( "You need to fill in all the fields!");
-//     return;
-
-//     }
-
-//     if( people <= 1){
-//     document.getElementById('hid').style.display="none";
-//     }else{
-//     document.getElementById('hid').style.display="block";
-//     }
-
-
-//     let  percent = amount -(amount*discount /100);
-//     let total = percent / people;
-//     total = total.toFixed(2);
-//     document.getElementById('each').innerHTML= total;
-//     document.getElementById('hid').style.display="block";
-
-
-
-// }
-// document.getElementById('hid').style.display="none";
 </script>
 </body>
 
