--- a/Week2/js-exercises/My favorite hobbies.html
+++ b/Week2/js-exercises/My favorite hobbies.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +11,6 @@
 
     </div>
 
-    <script src="js/5-hobbies.js"></script>
+    <script src="5-hobbies.js"></script>
 </body>
 </html>
